2008-07-11  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-narrow): new name was corba-object-narrow

2002-01-31  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-get-work-buffer): set buffer unibyte
	(corba-get-connection): set buffer unibyte, and process coding to
	binary.
	(corba-file-to-object): set buffer unibyte

Fri Mar 17 20:10:24 2000  Lennart Staflin  <lenst@lysator.liu.se>

	* corba.el (corba-request-get-response): get the current client in
	every loop iteration. The client may change if there is a
	forwarding of the object.